--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -19,9 +19,9 @@ spec:
           imagePullPolicy: Always
           env:
             - name: MLFLOW_TRACKING_URI
-              value: https://user-<your-sspcloud-id>-<pod_id>.user.lab.sspcloud.fr
+              value: https://user-f5f31q-266812.user.lab.sspcloud.fr
             - name: MLFLOW_MODEL_NAME
-              value: fasttext
+              value: modele_test2
             - name: MLFLOW_MODEL_VERSION
               value: "1"
           resources:
