--- a/kubernetes/ingress.yml
+++ b/kubernetes/ingress.yml
@@ -5,9 +5,9 @@ metadata:
 spec:
   tls:
     - hosts:
-        - <yves>-<colt>-api.lab.sspcloud.fr
+        - yves-colt-api.lab.sspcloud.fr
   rules:
-    - host: <yves>-<colt>-api.lab.sspcloud.fr
+    - host: yves-colt-api.lab.sspcloud.fr
       http:
         paths:
           - path: /
