--- a/argocd/template-argocd.yml
+++ b/argocd/template-argocd.yml
@@ -5,12 +5,12 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/<your-github-id>/formation-mlops.git
+    repoURL: https://github.com/ycoltier/formation-mlops.git
     targetRevision: HEAD
     path: kubernetes
   destination:
     server: https://kubernetes.default.svc
-    namespace: user-<your-sspcloud-id>
+    namespace: user-f5f31q
   syncPolicy:
     automated:
       selfHeal: true
